--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
     "chai": "^4.1.2",
